--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Debug Paths
+        run: |
+          ls -la
+          ls -la ${{ matrix.test-suite }}
+
       - name: Set Up Node.js
         uses: actions/setup-node@v3
         with:
