--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,29 +20,25 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Debug Paths
-        run: |
-          ls -la
-          ls -la ${{ matrix.test-suite }}
-
       - name: Set Up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: 'npm'
+          cache: npm
 
       - name: Install Dependencies
         run: |
-          if [ ! -f package-lock.json ]; then
-            npm install --package-lock-only
-          fi
+          ls -la
+          echo "Installing dependencies in ${{ matrix.test-suite }}"
           npm ci
         working-directory: ${{ matrix.test-suite }}
 
       - name: Run Tests
         run: |
+          echo "Running tests in ${{ matrix.test-suite }}"
           if [ "${{ matrix.test-suite }}" == "ui-tests" ]; then
-            npx playwright install --with-deps && npx playwright test
+            npx playwright install --with-deps
+            npx playwright test
           elif [ "${{ matrix.test-suite }}" == "api-tests" ]; then
             npx mocha
           fi
