fix comments: fix locators, remove waiter, add logger, linter and error handling for axios response

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,6 @@ jobs:
             npx playwright install --with-deps
             npx playwright test
           elif [ "${{ matrix.test-suite }}" == "api-tests" ]; then
-            npx mocha
+            npx mocha tests/**/*.test.js
           fi
         working-directory: ${{ matrix.test-suite }}
